--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -18,19 +18,21 @@ jobs:
         with:
           linter: pylint
 
-
-  discord:
-    runs-on: ubuntu-latest
+testes:
+    run-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run Discord Webhook
-        uses: Sniddl/discord-commits@v1.6
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          template: "avatar-with-link"
-          include-extras: true 
-
-
-
+          python-version: '3.13'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pip install pytest pytest-cov pytest-asyncio
+          pytest test/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
 
