--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -1,9 +1,10 @@
 name: Continuous Integration
-
 on:
   pull_request:
     branches:
       - main
+
+
 
 jobs:
   build:
@@ -18,18 +19,18 @@ jobs:
           linter: pylint
 
   testes:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4  # Use v4 (estável) ao invés de v5, que pode ser instável
-        with:
-          python-version: '3.13'       # Troque para uma versão estável e suportada
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Test with pytest
-        run: |
-          pip install pytest pytest-cov pytest-asyncio
-          pytest test/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - name: Set up Python
+          uses: actions/setup-python@v5
+          with:
+            python-version: '3.13'
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+        - name: Test with pytest
+          run: |
+            pip install pytest pytest-cov pytest-asyncio
+            pytest test/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
